using UnityEngine;

namespace Oko.Utilites
{
    public static class AnimationConstants
    {
        public static int WORK_ON_RESOURCE = Animator.StringToHash("WorkOnResource");
        public static int WORK = Animator.StringToHash("Work");
        public static int REST = Animator.StringToHash("Rest");
        public static int SPEED = Animator.StringToHash("Speed");
    }
}